--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,11 +35,7 @@ h3 {
 
 a {
     color: var(--link-color);
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
+    text-underline-offset: 0.2em;
 }
 
 .banner {
